2004-01-11  Daniel Macks  <dmacks@netspace.org>

	* PkgConfig.pm: Improved get_source_items_count(). Improved
	construction of _source_items. Disabled construction of
	_source_items for now.

2004-01-11  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Removed antiquated prompt_selection(). Improved
	fink-code error checking by use of Carp::confess.

2004-01-10  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Added get_source_items_count() and
	sanity-checking for get_source_items_list().

2004-01-10  Daniel Macks  <dmacks@netpace.org>

	* Base.pm: Added params_matching, a method to return the names of
	all parameters that match a passed regex.
	* PkgVersion.pm: Added _source_items, a ref to a list of refs to
	uniformly-keyed hashes of all info pertaining to each source for a
	package. Added accessor method get_source_items_list() to return a
	(deep) copy of this list.

2004-01-09  Remi Mommsen  <remigius.mommsen@cern.ch>

	* PkgVersion.pm: get_source: Do not return the default source name
	if there exists no source. Instead return 'none' as expected
	elsewhere. get_source_list and get_tarball_list return an empty
	list if there are no sources.

2004-01-09  Daniel Macks  <dmacks@netpace.org>

	* CLI.pm: Fixed a bug in print_breaking: was treating an embedded
	newline as an ordinary entity (printable character), not adjusting
	the wrapping for starting a new line.

2004-01-09  Daniel Macks  <dmacks@netpace.org>

	* Bootstrap.pm, SelfUpdate.pm: Swiched `cat` to Fink::Command::cat.
	* PkgVersion.pm: Improved check for failure when creating
	seg_addr_table file. Switched one system("mkdir") to &execute.

2004-01-08  Daniel Macks  <dmacks@netpace.org>

	* Validation.pm: Warning for DescDetail and DescUsage that will
	look bad in Terminal window (long lines and non-ASCII chars).
	Warning for oddly formatted Maintainer.

2004-01-06  Max Horn  <max@quendi.de>

	* PkgVersion.pm: Fixed resolve_depends code.