@@ -227,7 +227,7 @@ sub has_param {
 =item params_matching
 
   my @params = $obj->params_matching($regex);
-  my @params = $obj->params_matching($regex, $ignore_case);
+  my @params = $obj->params_matching($regex, $with_case);
 
 Returns a list of the parameters that exist for $obj that match the
 given pattern $regex. Each returned value is suitable for passing to
@@ -236,10 +236,11 @@ regular expression (which will not be further interpolated), with the
 exception that it will not return parameters of which only a substring
 matches. In perl terms, a leading ^ and trailing $ are applied. In
 human terms, passing 'a.'  will not return parameters such as 'apple'
-or 'cat'. If the optional $ignore_case is given and is true, matching
-will be done without regard to case (i.e., a /i modifier is applied).
-If $ignore_case is false or not given, the matching will be
-case-sensitive. The values are not returned in any particular order.
+or 'cat'. If the optional $with_case is given and is true, matching
+will be done with case-sensitivity. If $with_case is false or not
+given, the matching will be case-insensitive (i.e., a /i modifier is
+applied). In either case, the values returned are in their actual
+case. The values are not returned in any particular order.
 
 =cut
 
@@ -247,11 +248,11 @@ sub params_matching {
 	my $self = shift;
 	my $regex = shift;
 	$regex = '' unless defined $regex;
-	my $ignore_case = shift;
-	$ignore_case = '' unless defined $ignore_case;
+	my $with_case = shift;
+	$with_case = '' unless defined $with_case;
 
 	$regex = "^$regex\$";
-	if ($ignore_case) {
+	if ($with_case) {
 		$regex = qr/$regex/;
 	} else {
 		$regex = qr/$regex/i;
